FIXUP: CHROMIUM: mm: remove kstaled pmd page list walk
Architecture dependencies must only be removed if they don't exist.
This is not the case here, as the various build errors reported by
0-day clearly show.

include/linux/compiler.h:247:20: error: lvalue required as unary '&' operand
include/linux/compiler.h:253:22: note: in expansion of macro '__READ_ONCE'
include/linux/kernel.h:811:25: note: in expansion of macro '__no_side_effects'
include/linux/mm.h:1817:17: error: implicit declaration of function 'pte_offset_map'; did you mean 'pte_offset_map_lock'? [-Werror=implicit-function-declaration]
include/linux/mm.h:1817:17: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
include/linux/mm.h:1825:2: error: implicit declaration of function 'pte_unmap'; did you mean 'memunmap'? [-Werror=implicit-function-declaration]
mm/kstaled.c:1199:55: error: dereferencing pointer to incomplete type 'struct page_vma_mapped_walk'
mm/kstaled.c:1227:3: error: implicit declaration of function 'page_vma_mapped_walk_done' [-Werror=implicit-function-declaration]
mm/kstaled.c:1242:7: error: implicit declaration of function 'pte_young'; did you mean 'page_count'? [-Werror=implicit-function-declaration]
mm/kstaled.c:1245:26: error: 'PMD_MASK' undeclared (first use in this function); did you mean 'P4D_MASK'?
mm/kstaled.c:1246:16: error: 'PMD_SIZE' undeclared (first use in this function); did you mean 'PUD_SIZE'?
mm/kstaled.c:1248:8: note: in expansion of macro 'min'
mm/kstaled.c:335:12: error: implicit declaration of function 'pmd_trans_huge'; did you mean 'pmd_trans_huge_lock'? [-Werror=implicit-function-declaration]
mm/kstaled.c:335:2: note: in expansion of macro 'VM_BUG_ON'
mm/kstaled.c:396:43: error: implicit declaration of function 'pte_pfn'; did you mean 'pte_val'? [-Werror=implicit-function-declaration]
mm/kstaled.c:396:8: error: implicit declaration of function 'pte_present'; did you mean 'pud_present'? [-Werror=implicit-function-declaration]
mm/ksta

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -809,6 +809,7 @@ config MM_METRICS
 
 config KSTALED
 	bool "kstaled: a kswapd alternative"
+	depends on X86_64
 	depends on !NEED_MULTIPLE_NODES && !IDLE_PAGE_TRACKING
 	help
 	  kstaled wakes up every second, checks how fast free pages drop,
